@@ -1,4 +1,4 @@
-package com.svillanueva.springboot.microserviciositem.models.services.impl;
+package com.svillanueva.springboot.microserviciositem.services.impl;
 
 import java.util.HashMap;
 import java.util.List;
@@ -11,7 +11,7 @@ import org.springframework.web.client.RestTemplate;
 
 import com.svillanueva.springboot.microserviciositem.models.Item;
 import com.svillanueva.springboot.microserviciositem.models.Producto;
-import com.svillanueva.springboot.microserviciositem.models.services.ItemService;
+import com.svillanueva.springboot.microserviciositem.services.ItemService;
 
 @Service
 public class ItemServiceImpl implements ItemService {
@@ -23,7 +23,7 @@ public class ItemServiceImpl implements ItemService {
     List<Producto> productos = List
         .of(clienteRest.getForObject("http://localhost:8081/api/productos", Producto[].class));
 
-    return productos.stream().map((p) -> new Item(p, 1)).collect(Collectors.toList());
+    return productos.stream().map((p) -> new Item(p, 1)).toList();
   }
 
   @Override
